--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@nativescript/theme": "^2.3.3",
     "@vue/devtools": "^5.3.3",
     "d3-ease": "^1.0.6",
+    "http2": "^3.3.7",
     "nanoid": "^3.1.12",
     "nativescript-bitmap-factory": "^1.8.1",
     "nativescript-geolocation": "^5.1.0",
